<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="30dp"
        android:paddingTop="30dp"
        android:orientation="vertical"
        android:background="#003">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change your password Here"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginTop="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Old Password"
            android:inputType="textPassword"
            android:id="@+id/oldpassword_edit"
            android:drawableLeft="@drawable/ic_lock1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="New Password"
            android:inputType="textPassword"
            android:id="@+id/newpassword_edit"
            android:drawableLeft="@drawable/ic_lock2"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:id="@+id/changepassword_edit"
            android:layout_marginTop="40dp"
            android:text="Change Password"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="#fff"/>
    </LinearLayout>

</LinearLayout>
