...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <Button
                android:id="@+id/userRegister"
                android:layout_margin="5dp"
                android:textColor="@color/colorLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User register"
                android:textSize="12dp"
...
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

            <Button
                android:id="@+id/login"
                android:layout_marginTop="25dp"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:text="@string/login"
                android:textColor="@color/colorLight"/>
...
