<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/hilton"
                android:scaleType="centerCrop"
                android:id="@+id/image_edit"/>


            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_image"
                app:fabSize="normal"
                android:id="@+id/fab_edit"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"/>
        </FrameLayout>



        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:id="@+id/recycler_edit"
            android:layout_below="@id/image_edit"/>
    </LinearLayout>

    </ScrollView>

</LinearLayout>
